--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "sprint11",
   "homepage": "https://Nastena-na.github.io/Sprint11/",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.3",
+  "description": "A project with webpack",
+  "main": "./src/index.js",
   "scripts": {
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --mode production",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open --watch",
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/Nastena-na/Sprint11.git"
   },
-  "author": "",
+  "author": "Anastasia Guseva",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Nastena-na/Sprint11/issues"
@@ -31,6 +31,7 @@
     "gh-pages": "~2.0.1",
     "html-webpack-plugin": "^4.3.0",
     "image-webpack-loader": "^6.0.0",
+    "imagemin-pngquant": "^5.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
