--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sprint11",
-  "homepage": "https://Nastena-na.github.io/Sprint11/",
+  "homepage": "https://Nastena-na.github.io/First-Webpack/",
   "version": "0.0.4",
   "description": "A project with webpack",
   "main": "./src/index.js",
@@ -11,38 +11,40 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nastena-na/Sprint11.git"
+    "url": "git+https://github.com/Nastena-na/First-Webpack.git"
   },
   "author": "Anastasia Guseva",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Nastena-na/Sprint11/issues"
+    "url": "https://github.com/Nastena-na/First-Webpack/issues"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "autoprefixer": "^9.8.5",
-    "babel-loader": "^8.1.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.6.0",
-    "cssnano": "^4.1.10",
-    "file-loader": "^6.0.0",
-    "gh-pages": "~2.0.1",
-    "html-webpack-plugin": "^4.3.0",
-    "image-webpack-loader": "^6.0.0",
-    "imagemin-pngquant": "^5.0.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
+    "@babel/cli": "7.11.6",
+    "@babel/core": "7.11.6",
+    "@babel/preset-env": "7.11.5",
+    "autoprefixer": "9.6.1",
+    "babel-loader": "8.1.0",
+    "cross-env": "7.0.2",
+    "css-loader": "4.3.0",
+    "cssnano": "4.1.10",
+    "file-loader": "6.1.1",
+    "gh-pages": "2.0.1",
+    "html-webpack-plugin": "3.2.0",
+    "image-webpack-loader": "7.0.1",
+    "imagemin-gifsicle": "7.0.0",
+    "imagemin-pngquant": "5.0.1",
+    "mini-css-extract-plugin": "1.0.0",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "pngquant-bin": "3.1.1",
+    "postcss-loader": "4.0.4",
+    "style-loader": "2.0.0",
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0",
     "webpack-md5-hash": "0.0.6"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "core-js": "^3.4.1"
+    "babel-polyfill": "6.26.0",
+    "core-js": "3.4.1"
   }
 }
