--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sprint11",
+  "name": "first-webpack",
   "homepage": "https://Nastena-na.github.io/First-Webpack/",
   "version": "0.0.4",
   "description": "A project with webpack",
