--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sprint11",
-  "homepage": "https://Nastena-na.github.io/Sprint11/",
+  "name": "first-webpack",
+  "homepage": "https://Nastena-na.github.io/First-Webpack/",
   "version": "0.0.4",
   "description": "A project with webpack",
   "main": "./src/index.js",
@@ -11,12 +11,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nastena-na/Sprint11.git"
+    "url": "git+https://github.com/Nastena-na/First-Webpack.git"
   },
   "author": "Anastasia Guseva",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Nastena-na/Sprint11/issues"
+    "url": "https://github.com/Nastena-na/First-Webpack/issues"
   },
   "devDependencies": {
     "@babel/cli": "7.11.6",
